package org.example;

public class RandomGameEvent {

}
