package org.example;

public class Robbery extends Event {
}
