package org.example;

public class findCandy extends Event{
}
