package org.example;

public class noEvent extends Event{
}
